--- a/apache.yml
+++ b/apache.yml
@@ -7,6 +7,7 @@
        name: "apache2"
        state: "present"
     - name: starting service
+      service:
        name: apache2
        state: started
        enabled: True
