--- a/apache.yml
+++ b/apache.yml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
     - name: installing apache
-      yum: 
+      apt: 
        name: "apache2-bin"
        state: "present"
     - name: starting service
