--- a/apache.yml
+++ b/apache.yml
@@ -8,7 +8,7 @@
        state: "present"
     - name: starting service
       service:
-       name: apache2-bin
+       name: apache2
        state: started
        enabled: True
     - name: deploying
