--- a/apache.yml
+++ b/apache.yml
@@ -8,8 +8,8 @@
        state: "present"
     - name: starting service
       service:
-       name: apache2
-       state: started
+       name: "apache2-bin"
+       state: "started"
        enabled: True
     - name: deploying
       template:
