--- a/apache.yml
+++ b/apache.yml
@@ -4,11 +4,11 @@
   tasks:
     - name: installing apache
       apt: 
-       name: "httpd"
+       name: "apache2"
        state: "present"
     - name: starting service
       service:
-       name: "httpd"
+       name: "apache2"
        state: "started"
        enabled: True
     - name: deploying
